# gradients

./: .gitignore  CMakeLists.txt  README.md
c_interface/: colorspaces.hpp  main.cpp  python_bindings.cpp  python_bindings.hpp  python_bindings.tpp
include/: colorspaces.hpp  gradient.tpp  interpolation.hpp  python_bindings.hpp
py_color/: color.py  colorspaces.py
python/: colorspaces.py  decorators.py  test_colorspaces.py
src/: main.cpp  python_bindings.cpp
